// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RocketFormGroup <QuestionChoices /> renders correctly 1`] = `
.c0 {
  padding: 2rem 2rem 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.c1 {
  width: 100%;
  height: 4rem;
}

.c3 {
  display: grid;
  margin: 0 0 1rem 0;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  width: 100%;
}

.c2 {
  color: red;
  font-size: .8rem;
  height: 1rem;
}

<section>
  <div
    className="c0"
  >
    <label
      htmlFor="tm.explanation"
    >
      Two Months - Review Text
    </label>
    <textarea
      aria-describedby="tm-explanation-ErrorDescription"
      className="c1"
      name="tm.explanation"
      onChange={undefined}
      placeholder="Two Day Review Text"
      value=""
    />
    <span
      className="c2"
      id="tm-explanation-ErrorDescription"
    />
  </div>
  <div
    className="c0"
  >
    <label
      htmlFor="tm.question"
    >
      Two Months - Review Question
    </label>
    <textarea
      aria-describedby="tm-question-ErrorDescription"
      className="c1"
      name="tm.question"
      onChange={undefined}
      placeholder="Two Day Review Text"
      value={undefined}
    />
    <span
      className="c2"
      id="tm-question-ErrorDescription"
    />
  </div>
  <div
    className="c3"
  >
    <label>
      <input
        aria-describedby="tm-correct-ErrorDescription"
        checked={false}
        name="tm.correct"
        onBlur={undefined}
        onChange={undefined}
        type="radio"
        value=""
      />
      <input
        name="tm.choices[0].text"
        onChange={undefined}
        type="text"
        value=""
      />
    </label>
    <label>
      <input
        aria-describedby="tm-correct-ErrorDescription"
        checked={false}
        name="tm.correct"
        onBlur={undefined}
        onChange={undefined}
        type="radio"
        value=""
      />
      <input
        name="tm.choices[1].text"
        onChange={undefined}
        type="text"
        value=""
      />
    </label>
    <label>
      <input
        aria-describedby="tm-correct-ErrorDescription"
        checked={false}
        name="tm.correct"
        onBlur={undefined}
        onChange={undefined}
        type="radio"
        value=""
      />
      <input
        name="tm.choices[2].text"
        onChange={undefined}
        type="text"
        value=""
      />
    </label>
    <label>
      <input
        aria-describedby="tm-correct-ErrorDescription"
        checked={false}
        name="tm.correct"
        onBlur={undefined}
        onChange={undefined}
        type="radio"
        value=""
      />
      <input
        name="tm.choices[3].text"
        onChange={undefined}
        type="text"
        value=""
      />
    </label>
  </div>
  <span
    className="c2"
    id="tm-correct-ErrorDescription"
  />
</section>
`;

exports[`RocketFormGroup testing styled components render <Blurb /> renders correctly 1`] = `
.c0 {
  width: 100%;
  height: 4rem;
  margin: 1rem 0;
  text-align: justify;
}

<p
  className="c0"
/>
`;

exports[`RocketFormGroup testing styled components render <ErrorText /> renders correctly 1`] = `
.c0 {
  color: red;
  font-size: .8rem;
  height: 1rem;
}

<span
  className="c0"
/>
`;

exports[`RocketFormGroup testing styled components render <FormGroup /> renders correctly 1`] = `
.c0 {
  padding: 2rem 2rem 0 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
  className="c0"
/>
`;

exports[`RocketFormGroup testing styled components render <QuestionWrapper /> renders correctly 1`] = `
.c0 {
  display: grid;
  margin: 0 0 1rem 0;
  grid-template-columns: 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  width: 100%;
}

<div
  className="c0"
/>
`;

exports[`RocketFormGroup testing styled components render <TextArea /> renders correctly 1`] = `
.c0 {
  width: 100%;
  height: 4rem;
}

<textarea
  className="c0"
/>
`;
